--- a/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="_applicationSubmission" class="review-table">
   <div class="subheading2 grid-1">
     Has the ALC previously received an application or Notice of Intent for this proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('soilIsFollowUp')"></app-updated-banner>
   </div>
   <div class="grid-double">
     <span *ngIf="_applicationSubmission.soilIsFollowUp !== null">
@@ -12,7 +11,6 @@
 
   <div *ngIf="_applicationSubmission.soilIsFollowUp" class="subheading2 grid-1">
     Application or NOI ID
-    <app-updated-banner *ngIf="updatedFields.includes('soilFollowUpIDs')"></app-updated-banner>
   </div>
   <div *ngIf="_applicationSubmission.soilIsFollowUp" class="grid-double">
     {{ _applicationSubmission.soilFollowUpIDs }}
@@ -21,7 +19,6 @@
 
   <div class="subheading2 grid-1">
     What is the purpose of the proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('purpose')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.purpose }}
@@ -176,14 +173,14 @@
     <span class="subheading1">Project Duration</span>
   </div>
   <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
+    Duration
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilProjectDurationUnit }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilProjectDurationUnit"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
+    Length
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilProjectDurationAmount }}
@@ -192,7 +189,6 @@
 
   <div class="subheading2 grid-1">
     Describe the type, origin and quality of fill proposed to be placed.
-    <app-updated-banner *ngIf="updatedFields.includes('soilFillTypeToPlace')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilFillTypeToPlace }}
@@ -201,7 +197,6 @@
 
   <div class="subheading2 grid-1">
     Describe the type of soil proposed to be removed.
-    <app-updated-banner *ngIf="updatedFields.includes('soilTypeRemoved')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilTypeRemoved }}
@@ -210,7 +205,6 @@
 
   <div class="subheading2 grid-1">
     What alternative measures have you considered or attempted before proposing to place fill?
-    <app-updated-banner *ngIf="updatedFields.includes('soilAlternativeMeasures')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilAlternativeMeasures }}
@@ -219,7 +213,6 @@
 
   <div class="subheading2 grid-1">
     What steps will be taken to reduce impacts to surrounding agricultural land?
-    <app-updated-banner *ngIf="updatedFields.includes('soilReduceNegativeImpacts')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.soilReduceNegativeImpacts }}
@@ -252,7 +245,6 @@
 
   <div class="subheading2 grid-1">
     Is your proposal for aggregate extraction or placer mining?
-    <app-updated-banner *ngIf="updatedFields.includes('soilIsExtractionOrMining')"></app-updated-banner>
   </div>
   <div class="grid-double">
     <span *ngIf="_applicationSubmission.soilIsExtractionOrMining !== null">
@@ -266,7 +258,6 @@
 
   <div *ngIf="_applicationSubmission.soilIsExtractionOrMining" class="subheading2 grid-1">
     Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
-    <app-updated-banner *ngIf="updatedFields.includes('soilHasSubmittedNotice')"></app-updated-banner>
   </div>
   <div *ngIf="_applicationSubmission.soilIsExtractionOrMining" class="grid-double">
     <span *ngIf="_applicationSubmission.soilHasSubmittedNotice !== null">
