--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.html
@@ -18,7 +18,6 @@
     <div class="full-width subheading1">Parcel Information</div>
     <div class="subheading2 grid-1">
       Ownership Type
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.ownershipTypeCode')"></app-updated-banner>
     </div>
     <div class="grid-double">
       {{ parcel.ownershipType?.label }}
@@ -26,7 +25,6 @@
     </div>
     <div class="subheading2 grid-1">
       Legal Description
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.legalDescription')"></app-updated-banner>
     </div>
     <div class="grid-double">
       {{ parcel.legalDescription }}
@@ -37,7 +35,6 @@
     </div>
     <div class="subheading2 grid-1">
       Area (Hectares)
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.mapAreaHectares')"></app-updated-banner>
     </div>
     <div class="grid-double">
       {{ parcel.mapAreaHectares }}
@@ -48,7 +45,6 @@
     </div>
     <div class="subheading2 grid-1">
       PID {{ parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.CROWN ? '(optional)' : '' }}
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.pid')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <span *ngIf="parcel.pid">{{ parcel.pid | mask : '000-000-000' }}</span>
@@ -59,7 +55,7 @@
     </div>
     <ng-container *ngIf="parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.CROWN">
       <div class="subheading2 grid-1">
-        PIN (optional)<app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.pin')"></app-updated-banner>
+        PIN (optional)
       </div>
       <div class="grid-double">
         {{ parcel.pin }}
@@ -72,7 +68,6 @@
     <ng-container *ngIf="parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.FEE_SIMPLE">
       <div class="subheading2 grid-1">
         Purchase Date
-        <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.purchasedDate')"></app-updated-banner>
       </div>
       <div class="grid-double">
         {{ parcel.purchasedDate | date }}
@@ -85,7 +80,6 @@
     </ng-container>
     <div class="subheading2 grid-1">
       Farm Classification
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.isFarm')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <span *ngIf="parcel.isFarm !== null">{{ parcel.isFarm ? 'Yes' : 'No' }}</span>
@@ -93,7 +87,6 @@
     </div>
     <div class="subheading2 grid-1">
       Civic Address
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.civicAddress')"></app-updated-banner>
     </div>
     <div class="grid-double">
       {{ parcel.civicAddress }}
@@ -108,7 +101,6 @@
     </ng-container>
     <div class="subheading2 grid-1">
       Certificate Of Title
-      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.certificateOfTitle.uuid')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <div *ngIf="parcel.certificateOfTitle">
@@ -120,7 +112,7 @@
       ></app-no-data>
     </div>
     <div class="full-width subheading1">
-      Owner Information <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.owners')"></app-updated-banner>
+      Owner Information
     </div>
     <div class="full-width owner-information">
       <div class="subheading2">Type</div>
