--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="_noiSubmission" class="review-table">
   <div class="subheading2 grid-1">
     Has the ALC previously received an application or Notice of Intent for this proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('soilIsFollowUp')"></app-updated-banner>
   </div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsFollowUp !== null">
@@ -10,28 +9,19 @@
     <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsFollowUp === null"></app-no-data>
   </div>
 
-  <div *ngIf="_noiSubmission.soilIsFollowUp" class="subheading2 grid-1">
-    Application or NOI ID
-    <app-updated-banner *ngIf="updatedFields.includes('soilFollowUpIDs')"></app-updated-banner>
-  </div>
+  <div *ngIf="_noiSubmission.soilIsFollowUp" class="subheading2 grid-1">Application or NOI ID</div>
   <div *ngIf="_noiSubmission.soilIsFollowUp" class="grid-double">
     {{ _noiSubmission.soilFollowUpIDs }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilFollowUpIDs"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">
-    What is the purpose of the proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('purpose')"></app-updated-banner>
-  </div>
+  <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
     {{ _noiSubmission.purpose }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.purpose"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">
-    Describe the type of soil proposed to be removed.
-    <app-updated-banner *ngIf="updatedFields.includes('soilTypeRemoved')"></app-updated-banner>
-  </div>
+  <div class="subheading2 grid-1">Describe the type of soil proposed to be removed.</div>
   <div class="grid-double">
     {{ _noiSubmission.soilTypeRemoved }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilTypeRemoved"></app-no-data>
@@ -42,7 +32,6 @@
     <div class="grid-1"></div>
     <div class="grid-2">
       <strong>Soil to be Removed</strong>
-      <app-updated-banner *ngIf="updatedFields.includes('soilToRemoveVolume')"></app-updated-banner>
     </div>
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
@@ -74,14 +63,6 @@
     <div class="grid-1"></div>
     <div class="grid-2">
       <strong>Soil already Removed</strong>
-      <app-updated-banner
-        *ngIf="
-          updatedFields.includes('soilAlreadyRemovedVolume') ||
-          updatedFields.includes('soilAlreadyRemovedArea') ||
-          updatedFields.includes('soilAlreadyRemovedMaximumDepth') ||
-          updatedFields.includes('soilAlreadyRemovedAverageDepth')
-        "
-      ></app-updated-banner>
     </div>
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
@@ -118,18 +99,12 @@
   <div class="full-width">
     <h4>Project Duration</h4>
   </div>
-  <div class="subheading2 grid-1">
-    Duration
-    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
-  </div>
+  <div class="subheading2 grid-1">Duration</div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationUnit }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilProjectDurationUnit"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">
-    Length
-    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
-  </div>
+  <div class="subheading2 grid-1">Length</div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationAmount }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilProjectDurationAmount"></app-no-data>
@@ -143,10 +118,7 @@
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">
-    Is your proposal for aggregate extraction or placer mining?
-    <app-updated-banner *ngIf="updatedFields.includes('soilIsExtractionOrMining')"></app-updated-banner>
-  </div>
+  <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsExtractionOrMining !== null">
       {{ _noiSubmission.soilIsExtractionOrMining ? 'Yes' : 'No' }}
@@ -173,7 +145,6 @@
 
     <div class="subheading2 grid-1">
       Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
-      <app-updated-banner *ngIf="updatedFields.includes('soilHasSubmittedNotice')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
