--- a/portal-frontend/src/app/shared/soil-table/soil-table.component.html
+++ b/portal-frontend/src/app/shared/soil-table/soil-table.component.html
@@ -32,6 +32,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="volume"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m<sup>3</sup></span>
         </mat-form-field>
@@ -50,6 +51,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="volume2"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m<sup>3</sup></span>
         </mat-form-field>
@@ -72,6 +74,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="area"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m<sup>2</sup></span>
         </mat-form-field>
@@ -90,6 +93,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="area2"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m<sup>2</sup></span>
         </mat-form-field>
@@ -112,6 +116,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="maximumDepth"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
@@ -130,6 +135,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="maximumDepth2"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
@@ -152,6 +158,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="averageDepth"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
@@ -160,7 +167,7 @@
           <div *ngIf="averageDepth.errors?.['required']">This field is required</div>
         </div>
       </div>
-      <div *ngIf='!!data2'>
+      <div *ngIf="!!data2">
         <mat-form-field appearance="outline">
           <input
             min="0.01"
@@ -170,6 +177,7 @@
             separatorLimit="9999999999"
             matInput
             formControlName="averageDepth2"
+            onfocus="this.select()"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
