Add business name to inbox
* Show government name over business name

--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -1,5 +1,8 @@
 <div>
   <div class="header-row">
+    <div *ngIf="profile && (profile.government || profile.businessName)">
+      <h6>{{ profile.government || profile.businessName }}</h6>
+    </div>
     <diV class="title">
       <h3>Portal Inbox</h3>
       <div>
