--- a/portal-frontend/src/app/shared/header/header.component.html
+++ b/portal-frontend/src/app/shared/header/header.component.html
@@ -36,7 +36,7 @@
       </button>
       <mat-menu class="user-menu" #userMenu="matMenu">
         <div class="item">User ID: {{ user?.bceidUserName }}</div>
-        <div class="item">Business: {{ user?.businessName }}</div>
+        <div class="item">Business: {{ user?.government || user?.businessName }}</div>
         <div class="item">Type: {{ user?.businessName ? 'BCeID Business' : 'BCeID Basic' }}</div>
       </mat-menu>
       <button class="inbox-btn" routerLink="/home" mat-flat-button color="primary">Portal Inbox</button>
