Add Mobile Inbox List
* Add new mobile layout for inbox
* Clean up CSS

--- a/portal-frontend/src/app/features/home/notification-list/notification-list.component.html
+++ b/portal-frontend/src/app/features/home/notification-list/notification-list.component.html
@@ -1,4 +1,4 @@
-<div class="table-wrapper">
+<div *ngIf='!isMobile' class="table-wrapper">
   <div class="table-container">
     <table mat-table [dataSource]="dataSource">
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -59,3 +59,4 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of SRWs"></mat-paginator>
   </div>
 </div>
+<app-inbox-list *ngIf="isMobile" [items]="listItems"></app-inbox-list>
