--- a/portal-frontend/src/app/features/home/home.component.scss
+++ b/portal-frontend/src/app/features/home/home.component.scss
@@ -13,6 +13,35 @@
     text-align: center;
     padding: rem(8);
   }
+
+  .label {
+    display: inline-block;
+    padding: rem(4) rem(16);
+    border-radius: rem(16);
+    font-weight: bold;
+  }
+
+  .table-wrapper {
+    overflow-x: auto;
+
+    .table-container {
+      display: table;
+      width: 100%;
+
+      table {
+        width: 100%;
+      }
+
+      ::ng-deep .mat-table {
+        ::ng-deep .mat-cell,
+        ::ng-deep .mat-header-cell,
+        ::ng-deep .mat-row,
+        ::ng-deep .mat-header-row {
+          min-width: rem(150);
+        }
+      }
+    }
+  }
 }
 
 .header-row {
