--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
@@ -2,7 +2,7 @@
 
 .owner-information {
   display: grid;
-  grid-template-columns: max-content max-content max-content max-content max-content max-content;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
@@ -13,8 +13,6 @@
 }
 
 .review-table {
-  grid-template-columns: 1fr 1fr !important;
-
   .full-width {
     grid-column: 1/3;
   }
