--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
@@ -60,7 +60,7 @@
 
   .other-attachments {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
+    grid-template-columns: 1fr 1fr 1fr;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
@@ -72,7 +72,7 @@
 
   .transferee-table {
     display: grid;
-    grid-template-columns: max-content max-content max-content max-content max-content;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
